--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         img {
             cursor: move;
-            transition: transform 0.2s;
+            transition: transform 0.1s;
         }
     </style>
 </head>
@@ -38,15 +38,9 @@
         document.addEventListener('DOMContentLoaded', function() {
             const img = document.getElementById('zoom-image');
             let scale = 1;
-            const zoomSpeed = 0.05;
+            const zoomSpeed = 0.01; // Reducimos la velocidad del zoom para que sea más suave
 
             img.onwheel = function(event) {
                 event.preventDefault();
                 scale += event.deltaY * -zoomSpeed;
-                scale = Math.min(Math.max(.125, scale), 4);
-                img.style.transform = `scale(${scale})`;
-            };
-        });
-    </script>
-</body>
-</html>
+                scale = Math.min(Mat
