--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
         document.addEventListener('DOMContentLoaded', function() {
             const img = document.getElementById('zoom-image');
             let scale = 1;
-            const zoomSpeed = 0.01; // Reducimos la velocidad del zoom para que sea más suave
+            const zoomSpeed = 0.02; // Reducimos la velocidad del zoom para que sea más suave
 
             img.onwheel = function(event) {
                 event.preventDefault();
                 scale += event.deltaY * -zoomSpeed;
-                scale = Math.min(Mat
+                scale = Math.min(Math.max(.125, scale), 4);
+                img.style.transform = `scale(${scale})`;
+            };
+        });
+    </script>
+</body>
+</html>
