--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagen con Zoom Gradual y Movimiento</title>
     <style>
-        body {
+        body, html {
             margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             background-color: #f0f0f0;
-            overflow: hidden;
         }
         #image-container {
-            overflow: hidden;
-            border: 0,1px solid #ccc;
             width: 100%;
             height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
             position: relative;
+            overflow: hidden;
         }
         img {
             cursor: grab;
             transition: transform 0.1s;
             user-select: none; /* Evita que se seleccionen partes de la imagen */
+            width: 100%;
+            height: auto;
         }
         img:active {
             cursor: grabbing;
@@ -43,7 +46,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             const img = document.getElementById('zoom-image');
             let scale = 1;
-            const zoomSpeed = 0.005; // Reducimos la velocidad del zoom para que sea más suave
+            const zoomSpeed = 0.005; // Disminuye la velocidad del zoom para que sea más suave
             let isDragging = false;
             let startX, startY;
 
@@ -51,7 +54,7 @@
             img.onwheel = function(event) {
                 event.preventDefault();
                 scale += event.deltaY * -zoomSpeed;
-                scale = Math.min(Math.max(.60, scale), 4);
+                scale = Math.min(Math.max(.65, scale), 4); // Ajusta el valor mínimo para un mayor alejamiento
                 img.style.transform = `scale(${scale})`;
             };
 
