--- a/index.html
+++ b/index.html
@@ -74,4 +74,52 @@
                 const mousePos = getMousePos(event);
 
                 const prevScale = scale;
-          
+                scale += event.deltaY * -zoomSpeed;
+                scale = Math.min(Math.max(minScale, scale), 4); // Ajusta el valor mínimo para un mayor alejamiento
+
+                if (scale === minScale) {
+                    centerImage();
+                } else {
+                    // Calcular el nuevo desplazamiento para centrar el zoom en la posición del mouse
+                    const rect = img.getBoundingClientRect();
+                    const offsetX = (mousePos.x - rect.width / 2) * (scale - prevScale);
+                    const offsetY = (mousePos.y - rect.height / 2) * (scale - prevScale);
+                    imgX -= offsetX;
+                    imgY -= offsetY;
+                    img.style.transform = `translate(${imgX}px, ${imgY}px) scale(${scale})`;
+                }
+            };
+
+            // Movimiento con el cursor
+            img.addEventListener('mousedown', function(event) {
+                isDragging = true;
+                startX = event.clientX - imgX;
+                startY = event.clientY - imgY;
+                img.style.cursor = 'grabbing';
+            });
+
+            img.addEventListener('mousemove', function(event) {
+                if (isDragging) {
+                    imgX = event.clientX - startX;
+                    imgY = event.clientY - startY;
+                    img.style.transform = `translate(${imgX}px, ${imgY}px) scale(${scale})`;
+                }
+            });
+
+            img.addEventListener('mouseup', function() {
+                isDragging = false;
+                img.style.cursor = 'grab';
+            });
+
+            img.addEventListener('mouseleave', function() {
+                isDragging = false;
+                img.style.cursor = 'grab';
+            });
+
+            // Centrar la imagen al cargar
+            centerImage();
+        });
+    </script>
+</body>
+</html>
+
