--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
         .controls {
             position: absolute;
-            bottom: 10px;
+            top: 10px; /* Mover los botones a la parte superior */
             left: 10px;
             display: flex;
             gap: 10px;
@@ -69,7 +69,7 @@
         const upButton = document.getElementById('up');
         const downButton = document.getElementById('down');
         let topPosition = 50; // Posición inicial en porcentaje
-        const moveStep = 1; // Distancia de movimiento en porcentaje (ajústalo según tus necesidades)
+        const moveStep = 2; // Distancia de movimiento en porcentaje (ajústalo según tus necesidades)
 
         // Función para mover la línea
         function moveLine(direction) {
